--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.collab-proxy": "2.0.3",
     "com.unity.entities.graphics": "1.0.0-pre.65",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.physics": "1.0.0-pre.65",
     "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.textmeshpro": "3.0.6",
