--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.0.3",
+    "com.unity.entities": "1.0.8",
     "com.unity.entities.graphics": "1.0.0-pre.65",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.5.1",
