--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,9 +9,12 @@
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.5.1",
     "com.unity.mobile.android-logcat": "1.3.2",
+    "com.unity.netcode": "1.0.11",
     "com.unity.physics": "1.0.0-pre.65",
     "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "14.0.7",
+    "com.unity.services.lobby": "1.0.3",
+    "com.unity.services.relay": "1.0.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
