--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -15,6 +15,7 @@
     "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.services.lobby": "1.0.3",
     "com.unity.services.relay": "1.0.5",
+    "com.unity.services.wire": "1.1.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
