--- a/Assets/Rival/Runtime/Rival.Runtime.asmdef
+++ b/Assets/Rival/Runtime/Rival.Runtime.asmdef
@@ -9,7 +9,8 @@
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:63afb046c8423dd448ae7aba042ea63d",
-        "GUID:e00140a815de944528348782854abe39"
+        "GUID:e00140a815de944528348782854abe39",
+        "GUID:953adc2a6b8b4e3c8df5b728bcd546e9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
